Fix para que aparezca el boton de limpiar